Fix: Use FakeAgeSignalsManager for Age Signals API while paused by Google
- Updated Age Signals package from 0.0.1-beta02 to 0.0.2
- Added FakeAgeSignalsManager implementation as workaround for API pause
- Google has paused live API responses (returns error code -1)
- Added USE_FAKE_FOR_TESTING flag for easy switching
- Included 5 test scenarios for different user states (verified, supervised, unknown, pending, denied)
- Expected Google API live launch: May/July 2026

--- a/10.0/AgeSignals/AgeSignals/AgeSignals.csproj
+++ b/10.0/AgeSignals/AgeSignals/AgeSignals.csproj
@@ -50,7 +50,7 @@
 	</ItemGroup>
 
 	<ItemGroup Condition="$(TargetFramework)=='net10.0-android'">
-		<PackageReference Include="Xamarin.Google.Android.Play.Age.Signals" Version="0.0.1-beta02" />
+		<PackageReference Include="Xamarin.Google.Android.Play.Age.Signals" Version="0.0.2" />
 	</ItemGroup>
 
 	<!-- iOS Binding Project Reference -->
