Fix iOS build failure in CI by setting default RuntimeIdentifier
The CI was failing with 'No valid iOS code signing keys found' error
when building for iOS. This occurred because .NET iOS SDK 26.2 on the
macos-26 runner defaults to device builds when no RuntimeIdentifier is
specified, which requires code signing certificates.

Changes:
- Set default RuntimeIdentifier to iossimulator-x64 in the main PropertyGroup
  when TargetFramework is net10.0-ios and no RID is specified
- This ensures the property is set during inner builds for iOS
- Removed redundant iOS simulator code signing configuration
- Developers can still override with -r ios-arm64 for device builds

The original conditional code signing config worked on macos-15 runners
but broke when GitHub Actions upgraded to macos-26 with .NET iOS SDK 26.2,
which has stricter build target defaults.

--- a/10.0/AgeSignals/AgeSignals/AgeSignals.csproj
+++ b/10.0/AgeSignals/AgeSignals/AgeSignals.csproj
@@ -14,6 +14,9 @@
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		
+		<!-- Default iOS builds to simulator to avoid code signing requirements in CI -->
+		<RuntimeIdentifier Condition="'$(TargetFramework)' == 'net10.0-ios' AND '$(RuntimeIdentifier)' == ''">iossimulator-x64</RuntimeIdentifier>
 
 		<!-- Display name -->
 		<ApplicationTitle>Age Signals</ApplicationTitle>
@@ -83,12 +86,6 @@
 	<!-- iOS Entitlements -->
 	<PropertyGroup Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">
 		<CodesignEntitlements>Platforms\iOS\Entitlements.plist</CodesignEntitlements>
-	</PropertyGroup>
-
-	<!-- iOS Simulator Code Signing (ad-hoc for simulator) -->
-	<PropertyGroup Condition="$(TargetFramework)=='net10.0-ios' AND $(RuntimeIdentifier.Contains('simulator'))">
-		<CodesignKey>-</CodesignKey>
-		<CodesignProvision></CodesignProvision>
 	</PropertyGroup>
 
 </Project>
