Fix iOS binding project to also use simulator RuntimeIdentifier
The previous fix set RuntimeIdentifier for the main AgeSignals project,
but the iOS binding project (DeclaredAgeRangeWrapperBinding.iOS) also
needs the same fix since it's built first and was still triggering the
code signing error.

Added default RuntimeIdentifier to iossimulator-x64 in the binding
project when none is specified, matching the fix in the main project.

This ensures both projects build for simulator by default in CI,
avoiding the need for code signing certificates.

--- a/10.0/AgeSignals/DeclaredAgeRangeWrapperBinding.iOS/DeclaredAgeRangeWrapperBinding.iOS.csproj
+++ b/10.0/AgeSignals/DeclaredAgeRangeWrapperBinding.iOS/DeclaredAgeRangeWrapperBinding.iOS.csproj
@@ -5,6 +5,9 @@
     <ImplicitUsings>true</ImplicitUsings>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <IsBindingProject>true</IsBindingProject>
+    
+    <!-- Default to iOS simulator to avoid code signing requirements in CI -->
+    <RuntimeIdentifier Condition="'$(RuntimeIdentifier)' == ''">iossimulator-x64</RuntimeIdentifier>
   </PropertyGroup>
 
   <ItemGroup>
