Fix: Move RuntimeIdentifier to iOS PropertyGroup for correct evaluation
PROBLEM: The RuntimeIdentifier was set in the main PropertyGroup with
a condition that checks TargetFramework == 'net10.0-ios', but during
multi-targeted builds, TargetFramework is empty in the outer evaluation.

SOLUTION: Move RuntimeIdentifier to the iOS-specific PropertyGroup that
uses GetTargetPlatformIdentifier() - this evaluates correctly during the
inner build when the iOS target framework is active.

This matches the same pattern used for CodesignEntitlements and ensures
the property is set at the right evaluation phase.

--- a/10.0/AgeSignals/AgeSignals/AgeSignals.csproj
+++ b/10.0/AgeSignals/AgeSignals/AgeSignals.csproj
@@ -14,9 +14,6 @@
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		
-		<!-- Default iOS builds to simulator to avoid code signing requirements in CI -->
-		<RuntimeIdentifier Condition="'$(TargetFramework)' == 'net10.0-ios' AND '$(RuntimeIdentifier)' == ''">iossimulator-x64</RuntimeIdentifier>
 
 		<!-- Display name -->
 		<ApplicationTitle>Age Signals</ApplicationTitle>
@@ -86,6 +83,8 @@
 	<!-- iOS Entitlements -->
 	<PropertyGroup Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">
 		<CodesignEntitlements>Platforms\iOS\Entitlements.plist</CodesignEntitlements>
+		<!-- Force simulator build when no RuntimeIdentifier is specified (for CI builds) -->
+		<RuntimeIdentifier Condition="'$(RuntimeIdentifier)' == ''">iossimulator-x64</RuntimeIdentifier>
 	</PropertyGroup>
 
 </Project>
