Add _CodeSigningRequired=false to bypass iOS signing validation in CI
This property explicitly tells the iOS SDK to skip code signing validation,
which is required for CI builds that target the simulator without certificates.

--- a/10.0/AgeSignals/AgeSignals/AgeSignals.csproj
+++ b/10.0/AgeSignals/AgeSignals/AgeSignals.csproj
@@ -87,6 +87,7 @@
 		<CodesignKey></CodesignKey>
 		<CodesignProvision></CodesignProvision>
 		<RuntimeIdentifier>iossimulator-arm64</RuntimeIdentifier>
+		<_CodeSigningRequired>false</_CodeSigningRequired>
 	</PropertyGroup>
 
 </Project>
